--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <!-- client section start -->
       <div class="clients_section layout_padding">
          <div class="container">
-            <h1 class="client_text"><strong>WHAT IS SAY CLIENTS</strong></h1>
+            <h1 class="client_text"><strong><h1>Raj</h1></strong></h1>
             <p class="client_long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum </p>
             <div class="clients_section_2">
                <div id="my_carousel" class="carousel slide" data-ride="carousel">
