--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Gravitao</title>
+      <title>Ujjwal Raj</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -161,7 +161,7 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="about_taital">
-                     <h1 class="about_text">ABOUT COMPANY</h1>
+                     <h1 class="about_text">ABOUT Ujjwal</h1>
                      <p class="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and webIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web</p>
                      <div class="about_bt"><a href="#">ABOUT MORE</a></div>
                   </div>
